--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,26 +14,7 @@
     <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <com.google.android.gms.common.SignInButton android:id="@+id/plus_sign_in_button"
-                android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:layout_marginBottom="32dp" />
-
-            <LinearLayout android:id="@+id/plus_sign_out_buttons"
-                android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:visibility="gone" android:weightSum="2">
-
-                <Button android:id="@+id/plus_sign_out_button" style="?android:textAppearanceSmall"
-                    android:layout_width="match_parent" android:layout_height="match_parent"
-                    android:layout_weight="1" android:text="@string/plus_sign_out" />
-
-                <Button android:id="@+id/plus_disconnect_button"
-                    style="?android:textAppearanceSmall" android:layout_width="match_parent"
-                    android:layout_height="match_parent" android:layout_weight="1"
-                    android:text="@string/plus_disconnect" />
-
-            </LinearLayout>
+            android:orientation="vertical" android:layout_gravity="center_vertical">
 
             <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:orientation="vertical">
@@ -53,7 +34,27 @@
                 <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                     android:layout_width="match_parent" android:layout_height="wrap_content"
                     android:layout_marginTop="16dp" android:text="@string/action_sign_in"
-                    android:textStyle="bold" />
+                    android:textStyle="bold" android:background="@color/theme_primary"
+                    android:textColor="@android:color/white"/>
+
+            </LinearLayout>
+
+            <com.google.android.gms.common.SignInButton android:id="@+id/plus_sign_in_button"
+                android:layout_width="match_parent" android:layout_height="wrap_content"
+                android:layout_marginBottom="32dp" />
+
+            <LinearLayout android:id="@+id/plus_sign_out_buttons"
+                android:layout_width="match_parent" android:layout_height="wrap_content"
+                android:visibility="gone" android:weightSum="2">
+
+                <Button android:id="@+id/plus_sign_out_button" style="?android:textAppearanceSmall"
+                    android:layout_width="match_parent" android:layout_height="match_parent"
+                    android:layout_weight="1" android:text="@string/plus_sign_out" />
+
+                <Button android:id="@+id/plus_disconnect_button"
+                    style="?android:textAppearanceSmall" android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:layout_weight="1"
+                    android:text="@string/plus_disconnect" />
 
             </LinearLayout>
         </LinearLayout>
