--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/layout"
         android:layout_width="match_parent"
@@ -11,17 +11,75 @@
             android:id="@+id/cameraPreview_frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-        <ImageButton
-            android:id="@+id/button_takePicture"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:background="@drawable/button_round"
-            android:layout_gravity="bottom|center"
-            android:layout_marginBottom="16dp"
-            android:src="@drawable/ic_camera"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="true"/>
-
+        <FrameLayout
+            android:id="@+id/frame_cameraButtons"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ProgressBar
+                android:id="@+id/video_progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:layout_alignParentTop="true"
+                android:max="100"
+                android:progress="0"
+                android:progressDrawable="@drawable/progress_bar"/>
+            <ImageButton
+                android:id="@+id/button_takePicture"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_gravity="bottom|center"
+                android:layout_marginBottom="16dp"
+                android:src="@drawable/ic_camera"
+                android:scaleType="fitCenter"
+                android:padding="0dp"
+                android:adjustViewBounds="true"
+                android:background="@android:color/transparent"/>
+            <ImageButton
+                android:id="@+id/button_flashOff"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="bottom|left"
+                android:src="@drawable/ic_flash_off"
+                android:layout_margin="24dp"
+                android:scaleType="fitCenter"
+                android:padding="0dp"
+                android:adjustViewBounds="true"
+                android:background="@android:color/transparent"/>
+            <ImageButton
+                android:id="@+id/button_flashOn"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="bottom|left"
+                android:src="@drawable/ic_flash_on"
+                android:layout_margin="24dp"
+                android:scaleType="fitCenter"
+                android:padding="0dp"
+                android:adjustViewBounds="true"
+                android:background="@android:color/transparent"/>
+            <ImageButton
+                android:id="@+id/button_cameraRear"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="bottom|right"
+                android:src="@drawable/ic_camera_rear"
+                android:layout_margin="24dp"
+                android:scaleType="fitCenter"
+                android:padding="0dp"
+                android:adjustViewBounds="true"
+                android:background="@android:color/transparent"/>
+            <ImageButton
+                android:id="@+id/button_cameraFront"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="bottom|right"
+                android:src="@drawable/ic_camera_front"
+                android:layout_margin="24dp"
+                android:scaleType="fitCenter"
+                android:padding="0dp"
+                android:adjustViewBounds="true"
+                android:background="@android:color/transparent"/>
+        </FrameLayout>
     </FrameLayout>
     <FrameLayout
         android:id="@+id/picturePreview_frame"
@@ -37,5 +95,17 @@
             android:padding="4dp"
             android:adjustViewBounds="true"
             android:background="@android:color/transparent"/>
+        <ImageButton
+            android:id="@+id/button_uploadPicture"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:src="@drawable/ic_check"
+            android:layout_margin="24dp"
+            android:scaleType="fitCenter"
+            android:padding="0dp"
+            android:layout_gravity="bottom|right"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent" />
+
     </FrameLayout>
 </RelativeLayout>
