--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="theme_primary">#00BCD4</color>
     <color name="theme_primary_dark">#0097A7</color>
     <color name="theme_primary_light">#B2EBF2</color>
-
     <color name="theme_accent">#FFFF00</color>
+    <color name="black_overlay">#66000000</color>
+
 </resources>
